master.cfg: local changes that are not supposed to be upstreamed

--- a/master.cfg
+++ b/master.cfg
@@ -171,25 +171,25 @@ for branch in ['4.15', '4.14', '4.13', '4.12', '4.11', '4.10', '4.9',
         treeStableTimer=None,
         builderNames=builderNames(branch)))
 
-gpcf = util.ChangeFilter(category='gentoo-pull', filter_fn=change_files_json_push)
-c['schedulers'].append(schedulers.SingleBranchScheduler(
-        name="gentoo_sources",
-        change_filter=gpcf,
-        treeStableTimer=None,
-        builderNames=["gentoo_sources"]))
-c['schedulers'].append(schedulers.ForceScheduler(
-        name="force_gentoo_sources",
-        builderNames=["gentoo_sources"]))
+#gpcf = util.ChangeFilter(category='gentoo-pull', filter_fn=change_files_json_push)
+#c['schedulers'].append(schedulers.SingleBranchScheduler(
+#        name="gentoo_sources",
+#        change_filter=gpcf,
+#        treeStableTimer=None,
+#        builderNames=["gentoo_sources"]))
+#c['schedulers'].append(schedulers.ForceScheduler(
+#        name="force_gentoo_sources",
+#        builderNames=["gentoo_sources"]))
 
-gpcf = util.ChangeFilter(category='gentoo-pull', filter_fn=syskernel_change)
-c['schedulers'].append(schedulers.SingleBranchScheduler(
-        name="other_sources",
-        change_filter=gpcf,
-        treeStableTimer=None,
-        builderNames=["other_sources"]))
-c['schedulers'].append(schedulers.ForceScheduler(
-        name="force_other_sources",
-        builderNames=["other_sources"]))
+#gpcf = util.ChangeFilter(category='gentoo-pull', filter_fn=syskernel_change)
+#c['schedulers'].append(schedulers.SingleBranchScheduler(
+#        name="other_sources",
+#        change_filter=gpcf,
+#        treeStableTimer=None,
+#        builderNames=["other_sources"]))
+#c['schedulers'].append(schedulers.ForceScheduler(
+#        name="force_other_sources",
+#        builderNames=["other_sources"]))
 
 gpcf = util.ChangeFilter(category='gentoo-pull', filter_fn=eclass_change)
 c['schedulers'].append(schedulers.SingleBranchScheduler(
@@ -333,15 +333,15 @@ for build_name, kernel_version in download_new_patch_and_build_kernel_kernel_lis
               workernames=["kernelci"],
               factory=download_new_patch_and_build_kernel(kernel_version, arch)))
 
-c['builders'].append(
-    util.BuilderConfig(name='gentoo_sources',
-      workernames=["kernelci"],
-      factory=test_gentoo_sources()))
+#c['builders'].append(
+#    util.BuilderConfig(name='gentoo_sources',
+#      workernames=["kernelci"],
+#      factory=test_gentoo_sources()))
 
-c['builders'].append(
-    util.BuilderConfig(name='other_sources',
-      workernames=["kernelci"],
-      factory=test_gentoo_sources()))
+#c['builders'].append(
+#    util.BuilderConfig(name='other_sources',
+#      workernames=["kernelci"],
+#      factory=test_gentoo_sources()))
 
 c['builders'].append(
     util.BuilderConfig(name='eclass_change',
@@ -356,8 +356,8 @@ c['builders'].append(
 
 c['services'] = []
 
-irc = reporters.IRC(host="irc.freenode.net", nick="kernelci",
-                   channels=["#gentoo-kernel"])
+#irc = reporters.IRC(host="irc.freenode.net", nick="kernelci",
+#                   channels=["#gentoo-kernel"])
 
 template=u'''\
 <h4>Build status: {{ summary }}</h4>
@@ -371,13 +371,12 @@ template=u'''\
 mn = reporters.MailNotifier(fromaddr="kernelCI-buildbot@gentoo.org",
                             sendToInterestedUsers=False,
                             mode=('all'),
-                            extraRecipients=['alice.ferrazzi@gmail.com',
-                                             'm.j.everitt@iee.org'],
+                            extraRecipients=['romain.perier@gmail.com'],
                             messageFormatter=reporters.MessageFormatter(
                             template=template, template_type='html',
                             wantProperties=True, wantSteps=True))
 
-c['services'].append(irc)
+#c['services'].append(irc)
 c['services'].append(mn)
 c['services'].append(gs)
 
@@ -394,7 +393,7 @@ c['titleURL'] = "https://wiki.gentoo.org/wiki/Project:Kernel"
 # the 'www' entry below, but with an externally-visible host name which the
 # buildbot cannot figure out without some help.
 
-c['buildbotURL'] = "http://kernel1.amd64.dev.gentoo.org:8010/"
+c['buildbotURL'] = "http://thecow:8010/"
 
 # minimalistic config to activate new web UI
 c['www'] = dict(port=8010,
@@ -437,3 +436,4 @@ c['db'] = {
     # leave this at its default for all but the largest installations.
     'db_url' : "sqlite:///state.sqlite",
 }
+c['buildbotNetUsageData'] = "full"
