master.cfg: Add architecture targets for kernel builders
This enables the use of the architecture keyword that is now passed as
argument of the underlying scripts. Now builders will use dedicated
configurations file and build directories for the architecture being
tested. Note, that two builders that target the same kernel version
cannot collide. For now, the kernel builders will only be run for the
'amd64' architecture, as it was initially the case.

Signed-off-by: Romain Perier <romain.perier@gmail.com>

--- a/master.cfg
+++ b/master.cfg
@@ -207,7 +207,7 @@ gs = reporters.GitHubStatusPush(token=os.environ.get("BUILDBOT_STATUS_TOKEN"),
                                 verbose=True)
 
 
-def download_new_patch_and_build_kernel(version):
+def download_new_patch_and_build_kernel(version, arch):
     factory = util.BuildFactory()
     factory.addStep(steps.GitHub(repourl='https://github.com/gentoo/linux-patches',
                                  mode='incremental',
@@ -221,6 +221,9 @@ def download_new_patch_and_build_kernel(version):
 
     factory.addStep(steps.FileDownload(mastersrc="~/files/patch-kernel.sh",
                                        workerdest="files/patch-kernel.sh"))
+
+    factory.addStep(steps.FileDownload(mastersrc="~/files/build-kernel.sh",
+                                       workerdest="files/build-kernel.sh"))
 
     factory.addStep(steps.FileDownload(mastersrc="~/files/clean.sh",
                                        workerdest="clean.sh"))
@@ -237,19 +240,19 @@ def download_new_patch_and_build_kernel(version):
                                        workdir="build/files/"))
 
     factory.addStep(steps.ShellCommand(command=["/bin/sh", "patch-kernel.sh",
-                                                "-k", version],
+                                                "-a", arch, "-k", version],
                                        workdir="build/files/"))
 
     factory.addStep(steps.ShellCommand(command=["/bin/sh", "find.sh"],
                                        workdir="build/files/"))
 
-    factory.addStep(steps.ShellCommand(command=["make", "-j6"],
+    factory.addStep(steps.ShellCommand(command=["/bin/sh", "../build-kernel.sh", arch],
                                        workdir="build/files/linux-" + version + "/"))
 
-    factory.addStep(steps.ShellCommand(command=["make", "modules"],
+    factory.addStep(steps.ShellCommand(command=["/bin/sh", "../build-kernel.sh", arch, "modules"],
                                        workdir="build/files/linux-" + version + "/"))
 
-    factory.addStep(steps.ShellCommand(command=["/usr/bin/python", "qemu_check.py"],
+    factory.addStep(steps.ShellCommand(command=["/usr/bin/python", "qemu_check.py", arch],
                                        workdir="build/files/", timeout=3600))
 
     factory.addStep(steps.ShellCommand(command=["/bin/sh", "clean.sh"],
@@ -306,7 +309,7 @@ for build_name, kernel_version in download_new_patch_and_build_kernel_kernel_lis
     c['builders'].append(
         util.BuilderConfig(name=build_name,
           workernames=["kernelci"],
-          factory=download_new_patch_and_build_kernel(kernel_version)))
+          factory=download_new_patch_and_build_kernel(kernel_version, "amd64")))
 
 c['builders'].append(
     util.BuilderConfig(name='gentoo_sources',
