master.cfg: Add name to factory steps
This adds a name to most of the ShellCommand and GitHub factory steps
for the current builders. This is done by using the "name" property.

Signed-off-by: Romain Perier <romain.perier@gmail.com>

--- a/master.cfg
+++ b/master.cfg
@@ -219,7 +219,8 @@ gs = reporters.GitHubStatusPush(token=os.environ.get("BUILDBOT_STATUS_TOKEN"),
 
 def download_new_patch_and_build_kernel(version, arch):
     factory = util.BuildFactory()
-    factory.addStep(steps.GitHub(repourl='https://github.com/gentoo/linux-patches',
+    factory.addStep(steps.GitHub(name="Fetching linux-patches repository",
+                                 repourl='https://github.com/gentoo/linux-patches',
                                  mode='incremental',
                                  workdir="build/linux-patches", branch=version))
 
@@ -244,28 +245,35 @@ def download_new_patch_and_build_kernel(version, arch):
     factory.addStep(steps.FileDownload(mastersrc="~/files/find.sh",
                                        workerdest="files/find.sh"))
 
-    factory.addStep(steps.ShellCommand(command=["/usr/bin/python",
+    factory.addStep(steps.ShellCommand(name="Looking for new upstream release",
+                                       command=["/usr/bin/python",
                                                 "check-kernelpage.py",
                                                 "--version",version],
                                        workdir="build/files/"))
 
-    factory.addStep(steps.ShellCommand(command=["/bin/sh", "patch-kernel.sh",
+    factory.addStep(steps.ShellCommand(name="Patching kernel",
+                                       command=["/bin/sh", "patch-kernel.sh",
                                                 "-a", arch, "-k", version],
                                        workdir="build/files/"))
 
-    factory.addStep(steps.ShellCommand(command=["/bin/sh", "find.sh"],
+    factory.addStep(steps.ShellCommand(name="Listing rejected files",
+                                       command=["/bin/sh", "find.sh"],
                                        workdir="build/files/"))
 
-    factory.addStep(steps.ShellCommand(command=["/bin/sh", "../build-kernel.sh", arch],
+    factory.addStep(steps.ShellCommand(name="Building kernel",
+                                       command=["/bin/sh", "../build-kernel.sh", arch],
                                        workdir="build/files/linux-" + version + "/"))
 
-    factory.addStep(steps.ShellCommand(command=["/bin/sh", "../build-kernel.sh", arch, "modules"],
+    factory.addStep(steps.ShellCommand(name="Building modules",
+                                       command=["/bin/sh", "../build-kernel.sh", arch, "modules"],
                                        workdir="build/files/linux-" + version + "/"))
 
-    factory.addStep(steps.ShellCommand(command=["/usr/bin/python", "qemu_check.py", arch],
+    factory.addStep(steps.ShellCommand(name="Booting with QEMU",
+                                       command=["/usr/bin/python", "qemu_check.py", arch],
                                        workdir="build/files/", timeout=3600))
 
-    factory.addStep(steps.ShellCommand(command=["/bin/sh", "clean.sh"],
+    factory.addStep(steps.ShellCommand(name="Cleanup",
+                                       command=["/bin/sh", "clean.sh"],
                                        workdir="build/", alwaysRun=True))
 
     return factory
@@ -289,8 +297,9 @@ def pull_repourl(props):
 
 def test_gentoo_sources():
     factory = util.BuildFactory()
-    factory.addStep(steps.GitHub(repourl=pull_repourl,
-                          mode='incremental',workdir="build/gentoo", shallow=50))
+    factory.addStep(steps.GitHub(name="Fetching repository",
+                                 repourl=pull_repourl,
+                                 mode='incremental',workdir="build/gentoo", shallow=50))
     factory.addStep(steps.FileDownload(mastersrc="~/files/qemu_check.py",
                                    workerdest="files/qemu_check.py"))
     factory.addStep(steps.FileDownload(mastersrc="~/files/stabilize-packages.py",
@@ -299,12 +308,14 @@ def test_gentoo_sources():
                                    workerdest="clean.sh"))
     factory.addStep(steps.FileDownload(mastersrc="~/files/clean.py",
                                    workerdest="clean.py"))
-    factory.addStep(steps.ShellCommand(command=filterFiles,
+    factory.addStep(steps.ShellCommand(name="Stabilizing package",
+                                       command=filterFiles,
                                        workdir="build/files/"))
     # factory.addStep(steps.ShellCommand(command=["/usr/bin/python", "qemu_check.py"],
     #                                workdir="build/files/"))
-    factory.addStep(steps.ShellCommand(command=["/bin/sh", "clean.sh"],
-                                     workdir="build/", alwaysRun=True))
+    factory.addStep(steps.ShellCommand(name="Cleanup",
+                                       command=["/bin/sh", "clean.sh"],
+                                       workdir="build/", alwaysRun=True))
     return factory
 
 
