master.cfg: define and enable per architecture kernel builders
Currently, kernel are built and tested only for amd64. Other popular
architectures like arm or arm64 are supported by gentoo but not tested
yet. This adds support for the arm architecture for the kernel builders.
For now, a builder is defined for each kernel branch, but also per target.
As we currently support two architectures it means that we will have two
builders for each branch. The name of the builder is suffixed by the
name of the targeted arch. The schedulers will trigger all builders for
the corresponding branch when a change is detected.

Signed-off-by: Romain Perier <romain.perier@gmail.com>

--- a/master.cfg
+++ b/master.cfg
@@ -120,13 +120,23 @@ def eclass_change(change):
 
 c['schedulers'] = []
 
+architecture_testing_list = [ 'amd64', 'arm' ]
+
+def builderNames(branch):
+    builders = set()
+
+    for arch in architecture_testing_list:
+        builders.add(branch + ':' + arch)
+
+    return list(builders)
+
 for branch in ['4.15', '4.14', '4.13', '4.12', '4.11', '4.10', '4.9',
                '4.8', '4.4', '4.1']:
     c['schedulers'].append(schedulers.SingleBranchScheduler(
                                 name=branch,
                                 change_filter=util.ChangeFilter(branch=branch),
                                 treeStableTimer=None,
-                                builderNames=[branch]))
+                                builderNames=builderNames(branch)))
     # add a changefilter for the pull requests
     cf = util.ChangeFilter(category='pull', branch=branch)
     # but only those that are targeted for that branch
@@ -136,14 +146,14 @@ for branch in ['4.15', '4.14', '4.13', '4.12', '4.11', '4.10', '4.9',
                                 name="pull" + branch,
                                 change_filter=cf,
                                 treeStableTimer=None,
-                                builderNames=[branch]))
+                                builderNames=builderNames(branch)))
 
     stab_cf = util.ChangeFilter(category='pull', branch=branch)
     c['schedulers'].append(schedulers.SingleBranchScheduler(
                                 name="stabilize" + branch,
                                 change_filter=stab_cf,
                                 treeStableTimer=None,
-                                builderNames=[branch]))
+                                builderNames=builderNames(branch)))
 
     # add a changefilter for the pull requests
     gcf = util.ChangeFilter(category='gentoo-git', branch_re=branch+"\..*")
@@ -151,7 +161,7 @@ for branch in ['4.15', '4.14', '4.13', '4.12', '4.11', '4.10', '4.9',
         name="git_pull" + branch,
         change_filter=gcf,
         treeStableTimer=None,
-        builderNames=[branch]))
+        builderNames=builderNames(branch)))
 
     stab_gcf = util.ChangeFilter(category='gentoo-tags-git',
                                  branch_re="refs/tags/"+ branch + "_stabilize")
@@ -159,7 +169,7 @@ for branch in ['4.15', '4.14', '4.13', '4.12', '4.11', '4.10', '4.9',
         name="git_stabilize" + branch,
         change_filter=stab_gcf,
         treeStableTimer=None,
-        builderNames=[branch]))
+        builderNames=builderNames(branch)))
 
 gpcf = util.ChangeFilter(category='gentoo-pull', filter_fn=change_files_json_push)
 c['schedulers'].append(schedulers.SingleBranchScheduler(
@@ -306,10 +316,11 @@ download_new_patch_and_build_kernel_kernel_list = {'4.15':'4.15','4.14':'4.14',
 
 c['builders'] = []
 for build_name, kernel_version in download_new_patch_and_build_kernel_kernel_list.items():
-    c['builders'].append(
-        util.BuilderConfig(name=build_name,
-          workernames=["kernelci"],
-          factory=download_new_patch_and_build_kernel(kernel_version, "amd64")))
+    for arch in architecture_testing_list:
+        c['builders'].append(
+              util.BuilderConfig(name=build_name + ':' + arch,
+              workernames=["kernelci"],
+              factory=download_new_patch_and_build_kernel(kernel_version, arch)))
 
 c['builders'].append(
     util.BuilderConfig(name='gentoo_sources',
